# cmake-modules-extra

./: .cmake-format  .gitignore  CMakeLists.txt  LICENSE  README.md
module/compile/: CompileWarnings.cmake
module/fix/: FixVSCodeCMakeToolsPackageTargets.cmake
module/project/: ProjectConfigurePackage.cmake  ProjectDefaultConfigurationType.cmake  ProjectIsSubProject.cmake  ProjectPackageConfig.cmake.in
module/runtime/: RuntimeDependencies.cmake
test/: CMakeLists.txt
test/TestResolveRuntimeDependencies/: CMakeLists.txt
